# atoma-proxy/src/server/handlers/embeddings.rs
@@ -16,7 +16,7 @@ use utoipa::{OpenApi, ToSchema};
 
 use crate::server::{
     error::AtomaProxyError, http_server::ProxyState, middleware::RequestMetadataExtension,
-    types::ConfidentialComputeRequest,
+    types::{ConfidentialComputeRequest, ConfidentialComputeResponse},
 };
 
 use super::{request_model::RequestModel, update_state_manager};
@@ -233,7 +233,7 @@ pub(crate) struct ConfidentialEmbeddingsOpenApi;
         ("bearerAuth" = [])
     ),
     responses(
-        (status = OK, description = "Confidential embeddings generated successfully", body = ConfidentialComputeRequest),
+        (status = OK, description = "Confidential embeddings generated successfully", body = ConfidentialComputeResponse),
         (status = BAD_REQUEST, description = "Bad request"),
         (status = UNAUTHORIZED, description = "Unauthorized"),
         (status = INTERNAL_SERVER_ERROR, description = "Internal server error")
