# atoma-proxy/src/server/types.rs
@@ -1,4 +1,5 @@
 use serde::{Deserialize, Serialize};
+use serde_json::Value;
 use utoipa::ToSchema;
 
 /// A request for confidential computation that includes encrypted data and associated cryptographic parameters
@@ -34,4 +35,43 @@ pub struct ConfidentialComputeRequest {
     /// Number of compute units to be used for the request, for image generations,
     /// as this value is known in advance (the number of pixels to generate)
     pub num_compute_units: Option<u64>,
+}
+
+/// Represents a response from a confidential compute request
+#[derive(Debug, Deserialize, Serialize, ToSchema)]
+pub struct ConfidentialComputeResponse {
+    /// Encrypted response body (base64 encoded)
+    pub ciphertext: String,
+
+    /// Nonce used for encryption (base64 encoded)
+    pub nonce: String,
+
+    /// Signature of the response body (base64 encoded)
+    #[serde(skip_serializing_if = "Option::is_none")]
+    pub signature: Option<String>,
+
+    /// Hash of the response body (base64 encoded)
+    #[serde(skip_serializing_if = "Option::is_none")]
+    pub response_hash: Option<String>,
+
+    /// Usage statistics for the request
+    #[serde(skip_serializing_if = "Option::is_none")]
+    pub usage: Option<Usage>,
+}
+
+/// Represents usage statistics for a confidential compute request
+#[derive(Debug, Deserialize, Serialize, ToSchema)]
+pub struct Usage {
+    /// Number of compute units used
+    pub prompt_tokens: u64,
+
+    /// Number of compute units used
+    pub completion_tokens: u64,
+
+    /// Number of compute units used
+    pub total_tokens: u64,
+
+    /// Details about the completion tokens
+    #[serde(skip_serializing_if = "Option::is_none")]
+    pub completion_tokens_details: Option<Value>,
 }
